# sentinel-policy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: 01_agent_builder_gate.py  02_security_least_authority.py  03_compliance_doctrine_coverage.py  04_platform_layered_policies.py  05_provable_refusal_log.py  06_doctrine_coverage_report.py  07_lint_catches_mistakes.py  08_malformed_policy_errors.py  09_priority_conflict_resolution.py  10_reversibility_gate.py  11_numeric_thresholds.py  12_attributed_intent.py  13_boundary_integrity.py  14_gate_evaluator_integration.py  15_three_tier_stack.py  16_load_lint_from_disk.py  17_default_policy_modes.py  18_audit_log_jsonl.py  19_doctrine_walkthrough.py  20_cli_walkthrough.py  21_new_condition_operators.py  22_explain_trace.py  23_policy_diff.py  24_audit_replay.py  25_rate_limit.py  26_ci_gate_and_export.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
policies/: example.json
sentinel_policy/: __init__.py  audit.py  cli.py  conditions.py  diffing.py  doctrine.py  policy.py  ratelimit.py  report.py  serialization.py
tests/: test_audit.py  test_cli.py  test_cli_extra.py  test_conditions.py  test_conditions_edge.py  test_conditions_ops.py  test_coverage.py  test_demos.py  test_diffing.py  test_doctrine.py  test_doctrine_extra.py  test_errors.py  test_explain.py  test_policy.py  test_policy_eval.py  test_ratelimit.py  test_report.py  test_serialization.py  test_validate.py  test_validate_extra.py
