[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-policy"
version = "0.2.0"
description = "An open governance doctrine (the SENTINEL seven rules) and a file-backed policy-gate engine for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{ name = "Cognis Digital" }]
keywords = ["ai-governance", "policy", "policy-as-code", "agents", "compliance", "doctrine"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
sentinel = "sentinel_policy.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/sentinel-policy"

[tool.setuptools]
packages = ["sentinel_policy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
